--- a/config/atlas_config.yaml
+++ b/config/atlas_config.yaml
@@ -206,9 +206,9 @@ annotation:
             # drastically alter ORF LCA assignments if too high without further limits
             max_hits: 10
             top_fraction: 0.50
-        expazy:
-            namemap: /pic/projects/mint/atlas_databases/expazy.db
-            dmnd: /pic/projects/mint/atlas_databases/expazy.dmnd
+        enzyme:
+            namemap: /pic/projects/mint/atlas_databases/enzyme.db
+            dmnd: /pic/projects/mint/atlas_databases/enzyme.dmnd
             chunk_size: 500000
             # 'fast' or 'sensitive'
             run_mode: fast
@@ -246,8 +246,8 @@ summary_counts:
         # ko_id, ko_level1_name, ko_level2_name, ko_level3_id,
         # ko_level3_name, ko_gene_symbol, ko_product, ko_ec
 
-        # from expazy:
-        # expazy_name, expazy_ec
+        # from ENZYME:
+        # enzyme_name, enzyme_ec
 
         # from cazy (dbcan):
         # cazy_gene, cazy_family, cazy_class, cazy_ec
@@ -278,9 +278,9 @@ summary_counts:
             - cazy_ec
         CAZy_family:
             - cazy_family
-        ExPAZy:
-            - expazy_name
-            - expazy_ec
+        ENZYME:
+            - enzyme_name
+            - enzyme_ec
         RefSeq:
             - refseq_product
     KO:
@@ -300,8 +300,8 @@ summary_counts:
         - cog_id
         - cog_functional_class
         - cog_annotation
-    ExPAZy:
-        - expazy_name
-        - expazy_ec
+    ENZYME:
+        - enzyme_name
+        - enzyme_ec
     RefSeq:
         - refseq_product
