--- a/resources/example_config.yaml
+++ b/resources/example_config.yaml
@@ -124,7 +124,11 @@ annotation:
     translation_table: 11
     # when counting reads aligning to ORFs, require at least this many bp
     # overlapping the ORF
-    minimum_overlap: 20
+    minimum_overlap: 1
+    # count primary read alignments only when getting counts across ORFs
+    primary_only: false
+    # allow counting of multi-mapped reads when getting counts across ORFs
+    multi_mapping: true
     maxbin_max_iteration: 50
     maxbin_min_contig_length: 500
     maxbin_prob_threshold: 0.9
